--- a/app/src/main/res/layout/activity_assign_task.xml
+++ b/app/src/main/res/layout/activity_assign_task.xml
@@ -32,6 +32,24 @@
         android:hint="Task Description"
         android:inputType="textMultiLine" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="Select Date"
+        android:textColor="@color/colorPurple"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:inputType="textEmailAddress"
+        android:textStyle="bold" />
+
 
     <Button
         android:id="@+id/send"
