--- a/app/src/main/res/layout/custom_task_list.xml
+++ b/app/src/main/res/layout/custom_task_list.xml
@@ -6,7 +6,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/details"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="114dp"
         android:layout_margin="5dp">
 
         <RelativeLayout
@@ -49,6 +49,20 @@
                 android:drawableRight="@drawable/start_icon"
                 android:text="Finish"
                 android:id="@+id/finsih" />
+
+            <TextView
+                android:id="@+id/timedate"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="#90503d39"
+                android:text="Finish"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:textAllCaps="false" />
         </RelativeLayout>
+
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
